<resources>
    <string name="app_name">Minimal Calculator</string>
    <string name="calcText">0</string>
    <string name="_seven">7</string>
    <string name="_divide">/</string>
    <string name="_nine">9</string>
    <string name="_eight">8</string>
    <string name="_zero">0</string>
    <string name="_three">3</string>
    <string name="_two">2</string>
    <string name="_one">1</string>
    <string name="_six">6</string>
    <string name="_five">5</string>
    <string name="_four">4</string>
    <string name="_subtract">-</string>
    <string name="clr">CLR</string>
    <string name="_plus">+</string>
    <string name="_multiplication">*</string>
    <string name="_equal">=</string>
    <string name="_dot">.</string>
</resources>